fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 .wrapper {
   display: grid;
-  grid-template-rows: 200px 1fr 100px;
+  grid-template-rows: 200px auto 100px;
   grid-template-columns: 1fr 20px 200px;
   max-width: 700px;
   text-align: center;
@@ -69,7 +69,7 @@ body p {
   background-color: #BBB;
   border-radius: 10px;
   display: grid;
-  grid-template-rows: 40px 1fr 40px;
+  grid-template-rows: 40px auto auto;
   grid-template-columns: 3fr 15px 2fr;
   margin: 30px 0;
   padding: 20px;
@@ -123,7 +123,7 @@ footer a:hover {
 
 @media only screen and (max-width: 700px) {
   .wrapper {
-    grid-template-rows: 250px 1fr 600px 100px;
+    grid-template-rows: 250px auto auto 100px;
     grid-template-columns: 1fr;
   }
 
@@ -155,7 +155,7 @@ footer a:hover {
   }
 
   .project {
-    grid-template-rows: 40px 1fr 100px;
+    grid-template-rows: 40px auto auto;
     grid-template-columns: 1fr;
   }
 
